chore: refactor punishment logic